--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,7 @@
 
 RuhohSpec: '1.0'
 theme : twitter
-production_url : http://sample.com
+production_url : http://www.charlesgao.com/blog
 
 posts:
   permalink: /:categories/:title/
