--- a/site.yml
+++ b/site.yml
@@ -1,10 +1,10 @@
-title : Blog Title
-tagline: Blog Tagline
+title : Bottom Coder
+tagline: Just another coder...
 author :
-  name : Firstname Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
+  name : Charles Gao
+  email : tjcharlesgao@gmail.com
+  github : gaoyuan
+  twitter : charlesgao
   feedburner : feedname
 
 navigation :
