--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,7 @@
 
 RuhohSpec: '1.0'
 theme : twitter
-production_url : http://www.charlesgao.com/blog
+production_url : http://blog.charlesgao.com/
 
 posts:
   permalink: /:categories/:title/
