big change on style

--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,5 @@
-title : Shitty Coder
-tagline: Just another coder...
+title : SHITTY BLOG
+tagline: Yet another blog of Charles Gao.
 author :
   name : Charles Gao
   email : tjcharlesgao@gmail.com
