--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@
 # Usage: http://ruhoh.com/usage/configure/ 
 
 RuhohSpec: '1.0'
-theme : twitter
+theme : charlesgao
 production_url : http://blog.charlesgao.com/
 
 posts:
