changed the title of my blog

--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,7 @@
-title : SHITTY BLOG
-tagline: Yet another blog of Charles Gao.
+title : Math, CS and fun
+tagline : Yet another blog of Yuan Gao.
 author :
-  name : Charles Gao
+  name : Yuan Gao
   email : tjcharlesgao@gmail.com
   github : gaoyuan
   twitter : charlesgao
